--- a/css/home.css
+++ b/css/home.css
@@ -236,6 +236,11 @@ h2 {
   color: rgb(230, 138, 0);
 }
 
+.map{
+  margin-top: 30px;
+  margin-left: 300px;
+}
+
 .intro-title {
   margin-left: 30px;
   font-size: 25px;
